Ajuste de design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.remotejobs.io.app">
+        package="com.remotejobs.io.app">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -8,21 +8,20 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".CustomApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:installLocation="preferExternal"
-        android:label="@string/app_name"
-        android:largeHeap="true"
-        android:usesCleartextTraffic="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
-
-        <activity
-            android:name=".splash.view.SplashActivity"
+            android:name=".CustomApplication"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:installLocation="preferExternal"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:largeHeap="true"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:usesCleartextTraffic="true">
+        <activity
+                android:name=".splash.view.SplashActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,119 +30,110 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".home.view.HomeActivity"
-            android:label="@string/app_name">
+                android:name=".home.view.HomeActivity">
             <meta-data
-                android:name="default-url"
-                android:value="https://remotejobs-aa979.firebaseapp.com/home" />
+                    android:name="default-url"
+                    android:value="https://remotejobs-aa979.firebaseapp.com/home" />
 
             <intent-filter
-                android:autoVerify="true"
-                android:order="1">
+                    android:autoVerify="true"
+                    android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="remotejobs-aa979.firebaseapp.com"
-                    android:path="/home"
-                    android:scheme="https" />
+                        android:host="remotejobs-aa979.firebaseapp.com"
+                        android:path="/home"
+                        android:scheme="https" />
             </intent-filter>
             <intent-filter
-                android:autoVerify="true"
-                android:order="1">
+                    android:autoVerify="true"
+                    android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="remotejobs-aa979.firebaseapp.com"
-                    android:path="/home"
-                    android:scheme="http" />
+                        android:host="remotejobs-aa979.firebaseapp.com"
+                        android:path="/home"
+                        android:scheme="http" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".home.view.FavoritesActivity"
-            android:label="Favorites"
-            android:parentActivityName=".home.view.HomeActivity" />
-
+                android:name=".home.view.FavoritesActivity"
+                android:label="Favorites"
+                android:parentActivityName=".home.view.HomeActivity" />
         <activity android:name=".categories.view.HighestActivity">
             <intent-filter
-                android:autoVerify="true"
-                android:order="2">
+                    android:autoVerify="true"
+                    android:order="2">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="remotejobs-aa979.firebaseapp.com"
-                    android:path="/highestpaid"
-                    android:scheme="http" />
+                        android:host="remotejobs-aa979.firebaseapp.com"
+                        android:path="/highestpaid"
+                        android:scheme="http" />
             </intent-filter>
             <intent-filter
-                android:autoVerify="true"
-                android:order="2">
+                    android:autoVerify="true"
+                    android:order="2">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="remotejobs-aa979.firebaseapp.com"
-                    android:path="/highestpaid"
-                    android:scheme="https" />
+                        android:host="remotejobs-aa979.firebaseapp.com"
+                        android:path="/highestpaid"
+                        android:scheme="https" />
             </intent-filter>
         </activity>
-
         <activity android:name=".categories.view.CategoriesSelectActivity" />
-
         <activity android:name=".companies.view.CompaniesActivity">
             <intent-filter
-                android:autoVerify="true"
-                android:order="3">
+                    android:autoVerify="true"
+                    android:order="3">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="remotejobs-aa979.firebaseapp.com"
-                    android:path="/companies"
-                    android:scheme="http" />
+                        android:host="remotejobs-aa979.firebaseapp.com"
+                        android:path="/companies"
+                        android:scheme="http" />
             </intent-filter>
             <intent-filter
-                android:autoVerify="true"
-                android:order="3">
+                    android:autoVerify="true"
+                    android:order="3">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:host="remotejobs-aa979.firebaseapp.com"
-                    android:path="/companies"
-                    android:scheme="https" />
+                        android:host="remotejobs-aa979.firebaseapp.com"
+                        android:path="/companies"
+                        android:scheme="https" />
             </intent-filter>
         </activity>
-
         <activity android:name=".companies.view.CompaniesSelectActivity" />
-
         <activity
-            android:name=".detail.DetailActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+                android:name=".detail.DetailActivity"
+                android:theme="@style/AppTheme.NoActionBar" />
 
         <service android:name=".services.CustomFirebaseInstaceIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-
         <service android:name=".services.CustomFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
@@ -151,27 +141,24 @@
         </service>
 
         <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.remotejobs.io.app.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
+                android:name="androidx.core.content.FileProvider"
+                android:authorities="com.remotejobs.io.app.fileprovider"
+                android:exported="false"
+                android:grantUriPermissions="true">
             <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/filepaths" />
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/filepaths" />
         </provider>
 
         <meta-data
-            android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_stat_name" />
-
+                android:name="com.google.firebase.messaging.default_notification_icon"
+                android:resource="@drawable/ic_stat_name" />
         <meta-data
-            android:name="com.google.firebase.messaging.default_notification_color"
-            android:resource="@color/colorAccent" />
-
+                android:name="com.google.firebase.messaging.default_notification_color"
+                android:resource="@color/colorAccent" />
         <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="64f062bc6b62cea865d47208c0e9d4b4e4f79251" />
-
+                android:name="io.fabric.ApiKey"
+                android:value="64f062bc6b62cea865d47208c0e9d4b4e4f79251" />
     </application>
 
 </manifest>
