--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
         keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
     }
 
-    if(keystoreProperties["REMOTEJOBS_KEYSTORE_STORE"] == null) {
+    if (keystoreProperties["REMOTEJOBS_KEYSTORE_STORE"] == null) {
         // Load keystore properties from environment or set their default values
         if (env['REMOTEJOBS_KEYSTORE_STORE']) keystoreProperties.put('REMOTEJOBS_KEYSTORE_STORE', env['REMOTEJOBS_KEYSTORE_STORE'])
         else keystoreProperties.put('REMOTEJOBS_KEYSTORE_STORE', "../debug.keystore")
@@ -46,7 +46,7 @@ android {
     signingConfigs {
         debug {}
         release {
-            if(keystoreProperties["REMOTEJOBS_KEYSTORE_STORE"] != '') {
+            if (keystoreProperties["REMOTEJOBS_KEYSTORE_STORE"] != '') {
                 storeFile file(keystoreProperties["REMOTEJOBS_KEYSTORE_STORE"])
                 keyAlias keystoreProperties["REMOTEJOBS_KEYSTORE_ALIAS"]
                 storePassword keystoreProperties["REMOTEJOBS_KEYSTORE_KEY_PASS"]
@@ -167,6 +167,8 @@ dependencies {
     implementation "androidx.room:room-runtime:${rootProject.room_runtime}"
     implementation "androidx.room:room-rxjava2:${rootProject.room_rxjava2}"
     /*api "android.arch.persistence.room:testing:${rootProject.arch}"*/
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
     kapt "androidx.room:room-compiler:${rootProject.room_compiler}"
 
     // Lifecycle
@@ -175,7 +177,7 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:${rootProject.lifecycle_compiler}"
 
     /*######################## Dependency injection ###########################*/
-   /* implementation "org.kodein.di:kodein-di-generic-jvm:${rootProject.kodein}"
+    /* implementation "org.kodein.di:kodein-di-generic-jvm:${rootProject.kodein}"
     implementation "org.kodein.di:kodein-di-framework-android-x:${rootProject.kodein}"
     implementation "org.kodein.di:kodein-di-conf-jvm:${rootProject.kodein}"*/
     /*############################################################################*/
