--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,8 +30,7 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
-        <activity
-                android:name=".home.view.HomeActivity">
+        <activity android:name=".home.view.HomeActivity">
             <meta-data
                     android:name="default-url"
                     android:value="https://remotejobs-aa979.firebaseapp.com/home" />
@@ -95,7 +94,9 @@
                         android:scheme="https" />
             </intent-filter>
         </activity>
-        <activity android:name=".categories.view.CategoriesSelectActivity" />
+        <activity
+                android:name=".categories.view.CategoriesSelectActivity"
+                android:theme="@style/AppTheme" />
         <activity android:name=".companies.view.CompaniesActivity">
             <intent-filter
                     android:autoVerify="true"
@@ -124,10 +125,12 @@
                         android:scheme="https" />
             </intent-filter>
         </activity>
-        <activity android:name=".companies.view.CompaniesSelectActivity" />
+        <activity
+                android:name=".companies.view.CompaniesSelectActivity"
+                android:theme="@style/AppTheme" />
         <activity
                 android:name=".detail.DetailActivity"
-                android:theme="@style/AppTheme.NoActionBar" />
+                android:theme="@style/AppTheme.NoActionBar.Translucent" />
 
         <service android:name=".services.CustomFirebaseInstaceIdService">
             <intent-filter>
